src/css/components/header.sass
.header
    background-color: #eee
    background: linear-gradient(to bottom, rgba(238,238,238,1) 0%,rgba(0,0,0,0) 100%)
    overflow: hidden
    @media (max-width: 950px)
        background: none
    @media (max-width: 766px)
        background-color: #fff
        padding-top: 18px
        margin-bottom: 30px
    &__dollar
        position: relative
        z-index: 1
        &:after
            position: absolute
            right: -100px
            top: 0
            width: 194px
            height: 304px
            background: url(../images/dollar-sign.png) no-repeat
            background-size: contain
            content: ''
            z-index: -1
            @media (max-width: 950px)
                display: none


    &__btns
        padding: 0
    &__col
        padding: 0
        padding-right: 10px
        &:last-of-type
            padding-right: 0
        @media(max-width: 766px)
            padding: 0 15px!important
    &__group
        display: inline-block
        vertical-align: middle
    &__bar
        text-align: right
        margin-top: 26px
        @media (max-width: 766px)
            position: static
            margin-top: 0
            margin-bottom: 0px

        // font-size: 0
        &:after
            width: 100%
            height: 0
            content: ''
            display: inline-block
        @media (min-width: $screen-sm-min)
            text-align: justify

    &__navbar
        display: inline-block
        vertical-align: middle
        @media (min-width: 950px)
            display: none

    &__navbar-padding
        padding: 44px 15px 25px 15px
        @media (max-width: 766px)
            padding-top: 18px

    &__login
        width: 34px
        height: 39px
        cursor: pointer
        vertical-align: middle
        margin-right: 30px
        display: inline-block
        &:hover
            svg
                width: 42px
                height: 48px
        @media (min-width: $screen-sm-min)
            display: none

    & .btn-simple
        @media (min-width: $screen-sm-min)
            display: inline-block

    &__bar
        @media (min-width: 950px)
            display: none


        & .navbar
            margin: 0
            background: none
            border: none
            display: inline-block
            vertical-align: middle
            min-height: 0
            position: relative

            @media (max-width: 766px)
                position: static

            &-toggle
                margin: 0
                border: none
                padding: 0
                &:hover,
                &:active
                    background: none
                    .icon-bar:nth-child(3)
                        right: 0


            &-collapse
                position: absolute
                z-index: 1000
                top: -7px
                right: 0
                background-color: #8db70e
                width: 275px
                padding: 0
                @media (max-width: 766px)
                    left: 0
                    right: 0
                    top: 0
                    width: auto
                    text-align: left
                &__logo
                    display: none
                    @media (max-width: 766px)
                        display: block
                        height: 30px
                        margin-bottom: 24px
                &__close
                    position: absolute
                    top: 13px
                    right: 15px
                    font-size: 18px
                    font-weight: 700
                    color: #fff
                    cursor: pointer
                    &:hover
                    &:active
                        color: #000
                ul
                    margin: 0
                li
                    padding: 0
                    margin: 0
                a
                    display: block
                    color: #fff!important
                    font-size: 14px
                    margin-bottom: 16px
                    text-transform: uppercase
                    padding: 0

        & .icon-bar
            width: 25px
            height: 3px
            background-color: #272c31!important
            transition: right .3s ease-in-out
            &:nth-of-type(3)
                position: relative
                right: -6px


    &__logo
        display: block
        margin-left: -100px
        background: url(../images/logo.png) no-repeat
        background-size: contain
        width: 588px
        height: 309px
        @media (max-width: 950px)
            margin-left: 0
            width: 278px
            height: 153px
        @media (max-width: 766px)
            width: 100%
            height: 30px
            margin-top: 4px
            margin-left: 0
            background-image: url(../images/logo-mob.png)

    &__actions
        font-size: 0
        margin-top: 18px
        @media (max-width: 950px)
            margin-left: 10px
        @media (max-width: 766px)
            text-align: center
            margin-left: 0

    &__action
        display: inline-block
        margin-right: 6px
        max-width: 150px
        &:last-of-type
            margin-right: 0
        @media (max-width: 950px)
            width: 135px
            margin-right: 5px
        @media (max-width: 766px)
            margin-right: 0
            width: 33.3%
            max-width: none
        &-text
            text-align: right
            color: #e34627
            font-size: 12px
            line-height: 18px
            margin-top: 19px
            a
                color: #e34627


            @media (max-width: 950px)
                display: none

        &_color_green &
            &-text
                color: #88b500
                a
                    color: #88b500

        &_color_orange &
            &-text
                color: #f5881f
                a
                    color: #f5881f

